@@ -20,6 +20,11 @@
 # THE SOFTWARE.
 #++
 
+# Add the directory containing this file to the start of the load path if it
+# isn't there already.
+$:.unshift(File.dirname(__FILE__)) unless
+  $:.include?(File.dirname(__FILE__)) || $:.include?(File.expand_path(File.dirname(__FILE__)))
+
 require 'tzinfo/timezone'
 require 'tzinfo/country'
 require 'tzinfo/tzdataparser'
